--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-scroll": "^1.9.3",
